this is my ecommerce backend project.

--- a/fashionclubfrontend/pom.xml
+++ b/fashionclubfrontend/pom.xml
@@ -12,8 +12,15 @@
      <groupId>com.niit</groupId>
   <artifactId>FashionClub</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
+     </dependency>
+<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>4.0.0</version>
+    <scope>provided</scope>
+</dependency>
+<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>5.0.8.RELEASE</version>
@@ -46,14 +53,10 @@
   <scope>compile</scope>
 </dependency>
 
-    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+
+
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 <dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>3.1.0</version>
-    <scope>provided</scope>
-</dependency>
-    <dependency>
     <groupId>commons-io</groupId>
     <artifactId>commons-io</artifactId>
     <version>2.5</version>
@@ -65,7 +68,29 @@
     <artifactId>commons-fileupload</artifactId>
     <version>1.3.2</version>
 </dependency>
-   
+
+
+  <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>4.1.2.RELEASE</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>4.1.2.RELEASE</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    <version>4.1.2.RELEASE</version>
+</dependency>
+     
   </dependencies>
   <build>
     <finalName>fashionclubfrontend</finalName>
