--- a/FashionClub/.project
+++ b/FashionClub/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FashionClubbackend</name>
+	<name>FashionClub</name>
 	<comment></comment>
 	<projects>
 	</projects>
